views and settigns view from saskia

--- a/bti8108.groupbjjm.diabetespass/bti8108.groupbjjm.diabetespass/PageControllerView.xib
+++ b/bti8108.groupbjjm.diabetespass/bti8108.groupbjjm.diabetespass/PageControllerView.xib
@@ -10,6 +10,11 @@
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="Checkup">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="0ks-nf-Kpc">
+                    <rect key="frame" x="275" y="31" width="39" height="37"/>
+                </pageControl>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
         </view>
     </objects>
